# gerald_impact_engineer_takehome

./: .env copy.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: openapi.yaml
bank_stub/: transactions_user_gig.json  transactions_user_good.json  transactions_user_highutil.json  transactions_user_newjob.json  transactions_user_overdraft.json  transactions_user_risky.json  transactions_user_saver.json  transactions_user_stable.json  transactions_user_thin.json  users.json
datadog/conf.d/openmetrics.d/: conf.yaml
db/: schema.sql
metrics/: dashboard_datadog.json
mock/bank_server/: main.py
mock/ledger_server/: main.py
scripts/: generate_traffic.sh  load_test.sh
service/: Dockerfile  __init__.py  config.py  database.py  logging.py  main.py  metrics.py  models.py  requirements.txt  schemas.py
service/api/: __init__.py  routes.py
service/scoring/: __init__.py  calculator.py  credit_limit.py
service/services/: __init__.py  bank_client.py  decision.py  webhook.py
terraform/: dashboard.tf  monitors.tf  variables.tf
tests/: __init__.py  conftest.py  test_api.py  test_decision_integration.py  test_risk_logic.py  test_scoring_sample.py
